--- a/Prevu.Synoptics.V2502_Polymer_Processor/P210.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P210.xaml
@@ -264,5 +264,7 @@
             JumpFromLabel="210-21-CV1" 
             JumpToLabel="450-03-MA1" HorizontalAlignment="Center" Canvas.Left="389" Canvas.Top="277" VerticalAlignment="Top"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="220-VIEW" DetailsPageName="D220" HideComponentName="True" Canvas.Left="1012" Canvas.Top="181" />
+        <Labels:DeviceLabel 
+            ComponentName="210-71-ECS8" Canvas.Left="358" Canvas.Top="172" HorizontalAlignment="Center" VerticalAlignment="Top" />
     </Canvas>
 </UserControl>
