--- a/Prevu.Synoptics.V2502_Polymer_Processor/P430.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P430.xaml
@@ -39,7 +39,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="118" Color="Water" StatusComponent="420-71-ECS1" VisibilityComponent="" Canvas.Left="179" Canvas.Top="162"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="161" Color="Water" StatusComponent="420-71-ECS1" VisibilityComponent="" Canvas.Left="136" Canvas.Top="162"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="67" Color="Water" StatusComponent="420-71-ECS1" VisibilityComponent="" Canvas.Left="296" Canvas.Top="169"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="67" Color="Water" StatusComponent="420-71-ECS1" VisibilityComponent="" Canvas.Left="296" Canvas.Top="155"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="164" StatusComponent="420-01-MA1" PipeHeight="Medium" Canvas.Left="509" Canvas.Top="219"/>
@@ -348,7 +348,7 @@
         <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="60" Width="62" Canvas.Left="421" Canvas.Top="542"/>
         <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left" VerticalAlignment="Center" Height="22" Width="114" Canvas.Left="357" Canvas.Top="494"/>
         <Machines:STR_Washing_reactor_B HorizontalAlignment="Left" VerticalAlignment="Center" Height="217" Width="170" Canvas.Left="370" Canvas.Top="163"/>
-        <Rectangle HorizontalAlignment="Left" Height="2" Stroke="Black" VerticalAlignment="Center" Width="90" RenderTransformOrigin="0.5,0.5" Canvas.Left="134" Canvas.Top="132">
+        <Rectangle HorizontalAlignment="Left" Height="2" Stroke="Black" VerticalAlignment="Center" Width="90" RenderTransformOrigin="0.5,0.5" Canvas.Left="92" Canvas.Top="132">
             <Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -358,7 +358,7 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Machines:External HorizontalAlignment="Left" VerticalAlignment="Center" Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="149" Canvas.Top="44">
+        <Machines:External HorizontalAlignment="Left" VerticalAlignment="Center" Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="107" Canvas.Top="44">
             <Machines:External.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -442,10 +442,10 @@
         </Labels:DeviceLabel>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="420-71-ECS1" Canvas.Left="199" Canvas.Top="50"/>
+            ComponentName="420-71-ECS1" Canvas.Left="157" Canvas.Top="50"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="420-71-ECS5" Canvas.Left="199" Canvas.Top="105"/>
+            ComponentName="420-71-ECS5" Canvas.Left="157" Canvas.Top="105"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="430-04-MA1" Canvas.Left="905" Canvas.Top="454"/>
@@ -472,7 +472,7 @@
         </Labels:DeviceLabel>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="420-71-ECS3" Canvas.Left="78" Canvas.Top="105"/>
+            ComponentName="420-71-ECS3" Canvas.Left="36" Canvas.Top="105"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="430-SEP-PADDLES" Canvas.Left="691" Canvas.Top="145"/>
@@ -483,5 +483,7 @@
         <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="430-DISTRIBUTORS" DetailsPageName="D430_2" HideComponentName="True" Canvas.Left="937" Canvas.Top="145"/>
         <Labels:DeviceLabel 
             ComponentName="420-DISCH" Canvas.Left="481" Canvas.Top="547" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel 
+            ComponentName="420-71-ECS8" Canvas.Left="252" Canvas.Top="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
