V3168 aggiornamento plantview + sinottico fks

--- a/Prevu.Synoptics.V3168_Sirplaste/PlantView.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/PlantView.xaml
@@ -144,7 +144,6 @@
         </Machines:QX_LongElectricalCabinet>
         <Machines:QX_ShortElectricalCabinet Width="54" Height="64" Canvas.Left="361" Canvas.Top="727" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:GR_001 Height="166" Width="165" Canvas.Left="800" Canvas.Top="259" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SLX_Silo Height="193" Width="130" Canvas.Left="1360" Canvas.Top="175" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:STR_BatchReactor Height="137" Width="63" Canvas.Left="1644" Canvas.Top="163" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:STR_BatchReactor Height="138" Width="63" Canvas.Left="1618" Canvas.Top="196" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:DCE_DryingCentrifuge Height="112" Width="82" RenderTransformOrigin="0.5,0.5" Canvas.Left="1819" Canvas.Top="228" HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -179,8 +178,7 @@
             </Machines:DCE_DryingCentrifuge.RenderTransform>
         </Machines:DCE_DryingCentrifuge>
         <Machines:BBF_BigBagFilling Canvas.Left="900" Canvas.Top="616" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SLX_Silo Height="193" Width="130" Canvas.Left="1158" Canvas.Top="537" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="1957" Canvas.Top="159" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="1957" Canvas.Top="161" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:QX_LongElectricalCabinet.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -200,7 +198,7 @@
                 </TransformGroup>
             </Machines:QX_LongElectricalCabinet.RenderTransform>
         </Machines:QX_LongElectricalCabinet>
-        <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="1" Canvas.Top="565" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="1" Canvas.Top="633" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:QX_LongElectricalCabinet.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -214,7 +212,7 @@
         <Machines:PR_Prerompitore Width="204" Height="208" Canvas.Left="286" Canvas.Top="243" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Separation:SA_Elutriator Canvas.Left="1068" Canvas.Top="112" HorizontalAlignment="Center" Height="190" VerticalAlignment="Top"/>
         <Separation:VSP_SeparationTank_wHopper Width="204" Canvas.Left="635" Canvas.Top="112" Height="192" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="1" Canvas.Top="245" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="1" Canvas.Top="325" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:QX_LongElectricalCabinet.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -224,29 +222,29 @@
                 </TransformGroup>
             </Machines:QX_LongElectricalCabinet.RenderTransform>
         </Machines:QX_LongElectricalCabinet>
-        <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="400"  Width="364" Canvas.Left="174" Canvas.Top="92" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="400"  Width="364" Canvas.Left="174" Canvas.Top="92" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="400"  Width="620" Canvas.Left="615" Canvas.Top="92" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="400"  Width="620" Canvas.Left="1320" Canvas.Top="92" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="300"  Width="566" Canvas.Left="1399" Canvas.Top="505" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="300"  Width="528" Canvas.Left="787" Canvas.Top="505" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <Labels:DeviceLabel x:Name="Q11" ComponentName="Q11" Canvas.Left="50" Canvas.Top="129" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel x:Name="Q41" ComponentName="Q41" Canvas.Left="50" Canvas.Top="449" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="300"  Width="470" Canvas.Left="845" Canvas.Top="505" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <Labels:DeviceLabel x:Name="Q11" ComponentName="Q11" Canvas.Left="50" Canvas.Top="205" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel x:Name="Q41" ComponentName="Q41" Canvas.Left="50" Canvas.Top="513" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="Q51" ComponentName="Q51" Canvas.Left="2006" Canvas.Top="41" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel x:Name="Q61" ComponentName="Q61" Canvas.Left="2006" Canvas.Top="349" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel x:Name="Q91" ComponentName="Q91" Canvas.Left="2006" Canvas.Top="660" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel x:Name="Q01" ComponentName="Q01" Canvas.Left="343" Canvas.Top="670" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel x:Name="ESTOP" ComponentName="ESTOP-AREA-01" Canvas.Left="50" Canvas.Top="35" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel x:Name="ESTOP" ComponentName="ESTOP-AREA-01" Canvas.Left="50" Canvas.Top="115" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="HMI_01" ComponentName="HMI-01" Canvas.Left="488" Canvas.Top="587" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="HMI_02" ComponentName="HMI-02" Canvas.Left="488" Canvas.Top="747" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="S110" ComponentName="S110" Canvas.Left="186" Canvas.Top="431" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel x:Name="S410" ComponentName="S410" Canvas.Left="968" Canvas.Top="431" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel x:Name="S410" ComponentName="S410" Canvas.Left="1058" Canvas.Top="431" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel x:Name="S510" ComponentName="S510" Canvas.Left="1585" Canvas.Top="431" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="S610" ComponentName="S610" Canvas.Left="1660" Canvas.Top="744" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="S910" ComponentName="S910" Canvas.Left="1006" Canvas.Top="744" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="997" Canvas.Left="865" Canvas.Top="554" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="230" Canvas.Left="845" Canvas.Top="420" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:GroupLabel GroupName="320" Canvas.Left="1390" Canvas.Top="365" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:GroupLabel GroupName="810" Canvas.Left="1190" Canvas.Top="725" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="320" Canvas.Left="1400" Canvas.Top="365" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="810" Canvas.Left="1182" Canvas.Top="725" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="430" Canvas.Left="1798" Canvas.Top="655" Height="66" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="330" Canvas.Left="1579" Canvas.Top="155" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="530" Canvas.Left="1426" Canvas.Top="616" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -254,5 +252,10 @@
         <Labels:GroupLabel GroupName="210" Canvas.Left="629" Canvas.Top="249" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="290" Canvas.Left="1121" Canvas.Top="175" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="020" Canvas.Left="286" Canvas.Top="235" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:Storage_silo Canvas.Left="1368" Canvas.Top="178" Height="196" Width="132" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Storage_silo Canvas.Left="1149" Canvas.Top="533" Height="196" Width="132" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:ValueLabel Canvas.Left="1381" Canvas.Top="243" TrendName="LEVEL" ComponentName="320-41-LT1" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:ValueLabel Canvas.Left="1160" Canvas.Top="603" TrendName="WEIGHT" ComponentName="810-41-WT1" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:ValueLabel Canvas.Left="400" Canvas.Top="265" TrendName="LEVEL" ComponentName="020-41-LT1" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
