Progetto Test agginta riga per verifiche plantview

--- a/Test/MainWindow.xaml
+++ b/Test/MainWindow.xaml
@@ -9,7 +9,7 @@
         Title="MainWindow" Height="746" Width="1600">
 
 	<ScrollViewer HorizontalScrollBarVisibility="Auto">
-		
-	</ScrollViewer>
+        <Synoptics:PlantView CacheMode="BitmapCache"/>
+    </ScrollViewer>
 
 </Window>
